MediaFragmentURIParser::parseFragments shouldn't upconvert 8-bit string https://bugs.webkit.org/show_bug.cgi?id=118692

Reviewed by Michael Saboff.

Merge https://chromium.googlesource.com/chromium/blink/+/2aa17cc56a807f7e05d386d6eb66cda25e6b0542.

* html/MediaFragmentURIParser.cpp:
(WebCore::MediaFragmentURIParser::parseFragments):


Canonical link: https://commits.webkit.org/136583@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152673 268f45cc-cd09-0410-ab3c-d52691b4dbfc